Careers renamed and redirected to People & Paths

--- a/feeds.qmd
+++ b/feeds.qmd
@@ -14,8 +14,8 @@ title-block-banner: true
 ### Ideas
 [realworlddatascience.net/ideas/index.xml](https://realworlddatascience.net/ideas/index.xml)
 
-### Careers
-[realworlddatascience.net/careers/index.xml](https://realworlddatascience.net/careers/index.xml)
+### People & Paths
+[realworlddatascience.net/people-paths/index.xml](https://realworlddatascience.net/people-paths/index.xml)
 
 ### Viewpoints
 [realworlddatascience.net/viewpoints/index.xml](https://realworlddatascience.net/viewpoints/index.xml)
