--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ listing:
     contents: 
     - /case-studies
     - /ideas
-    - /careers
+    - /people-paths
     - /viewpoints
     - "!index.qmd"
     - "!development-plan-2.qmd"
@@ -56,9 +56,9 @@ listing:
     max-items: 3
     feed: false
 
-  - id: careers
+  - id: people-paths
     contents: 
-    - /careers
+    - /people-paths
     - "!index.qmd"
     sort: "date desc"
     type: grid
@@ -111,18 +111,6 @@ listing:
   #   - /viewpoints/interviews
   #   - "!index.qmd"
   #   - "!politics-of-modelling.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
-
-  # - id: career-profiles
-  #   contents: 
-  #   - /careers/career-profiles
-  #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
   #   categories: false
@@ -246,12 +234,12 @@ Excerpt from the UK government's framework for the use of generative AI
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/index.qmd">
+<a href="people-paths/index.qmd">
 
-## Careers 
+## People & Paths 
 </a>
 
-::: {#careers}
+::: {#people-paths}
 :::
 
 :::
