--- a/latest-content.qmd
+++ b/latest-content.qmd
@@ -10,7 +10,7 @@ listing:
   contents: 
   - /case-studies
   - /ideas
-  - /careers
+  - /people-paths
   - /viewpoints
   - "!index.qmd"
   sort: "date desc"
