--- a/people-paths/career-profiles/index.qmd
+++ b/people-paths/career-profiles/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: Career Profiles | Careers | Real World Data Science
+pagetitle: Career Profiles | People & Paths | Real World Data Science
 title: Career profiles
 subtitle: Data scientists share their career stories (so far) -- from first jobs to current challenges to future goals
 search: false
@@ -13,6 +13,8 @@ listing:
   filter-ui: false
   page-size: 12
 comments: false
+aliases: 
+  - /careers/career-profiles/
 ---
 
 
