--- a/people-paths/career-profiles/posts/2023/04/24/sami-rahman.qmd
+++ b/people-paths/career-profiles/posts/2023/04/24/sami-rahman.qmd
@@ -12,6 +12,8 @@ date: 04/24/2023
 image: images/sami-rahman-bw.png
 image-alt: Black and white portrait photo of Sami Rahman. Photo supplied by Sami Rahman, used with permission.
 toc: false
+aliases: 
+  - /careers/career-profiles/posts/2023/04/24/sami-rahman.html
 ---
 
 **Hi, Sami. Thank you for sharing your career story with Real World Data Science. Please tell us a little about yourself and your role in data science.**  
@@ -79,7 +81,7 @@ Transfer learning excites me most, as numerous large technology companies now of
 The challenge lies in staying relevant amidst the democratisation of data science. Through large language models, low-code, and transfer learning, advanced data science methods will become easier for non-specialists to do and use. Innovation and keeping up with modern data technologies will be crucial.
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -94,7 +96,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'I always thought someone like me couldn't work in data, let alone data science.'" Real World Data Science, April 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/04/24/sami-rahman.html)
+: Tarran, Brian. 2023. "'I always thought someone like me couldn't work in data, let alone data science.'" Real World Data Science, April 24, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/04/24/sami-rahman.html)
 :::
 :::
 :::
