--- a/people-paths/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
+++ b/people-paths/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
@@ -13,6 +13,8 @@ date: 05/24/2023
 image: images/jh-photo.png
 image-alt: Black and white portrait photo of Jasmine Holdsworth. Still from Real World Data Science video interview.
 toc: true
+aliases: 
+  - /careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.html
 ---
 {{< video https://www.youtube.com/embed/Plga2ldbcTE >}}
 
@@ -72,7 +74,7 @@ It would be remiss of me to not mention like ChatGPT or generative AI, etc. But 
 You will never stop learning at all because, frankly, the field is moving very, very quickly. So, even if you were to kind of consider yourself an absolute expert today, tomorrow that may not be the case. You will constantly be learning. And I have found that learning the same thing several times through different mediums and having things explained to you different ways is so valuable. Because you may think that you understand something from, say, your bootcamp, but then when you read about it as part of your degree -- this is obviously personal to me -- you read about it in a different way. And you think, Oh, I've never thought of it like that. And then you watch a YouTube video and someone visualises it and you think, okay, I understand this all a little bit deeper now. So, constantly revising what you do know and learning anything that's new as it comes up, I think everyone at every stage of career can kind of, can do that.
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -87,7 +89,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'For me, data science is about bridging the gap between business requirements and the data that businesses have.'" Real World Data Science, May 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.html)
+: Tarran, Brian. 2023. "'For me, data science is about bridging the gap between business requirements and the data that businesses have.'" Real World Data Science, May 24, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/2023/05/24/jasmine-holdsworth.html)
 :::
 :::
 :::
