--- a/people-paths/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
+++ b/people-paths/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
@@ -13,6 +13,8 @@ date: 06/20/2023
 image: images/chanuki-seresinhe.png
 image-alt: Photo of Chanuki Seresinhe. Photo supplied by Chanuki Seresinhe, used with permission.
 toc: false
+aliases: 
+  - /careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html
 ---
 **Hi, Chanuki. Thank you for sharing your career story with Real World Data Science. Please tell us a little about yourself and your role in data science.**\
 I am Chanuki Seresinhe, head of data science at Zoopla and Hometrack. My commercial career in data science began in 2018 at Channel 4. Since then, I have worked at a few different companies -- from startups to scale-ups -- before ending up here at Zoopla in 2022.
@@ -87,7 +89,7 @@ Generative AI's latest breakthroughs have made AI capabilities accessible to the
 We need to find a way to engage with the public in a more meaningful way -- rather than scaremongering -- to have public debates on issues that actually matter.
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -102,7 +104,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back.'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html)
+: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back.'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/2023/06/20/chanuki-seresinhe.html)
 :::
 :::
 :::
