--- a/people-paths/career-profiles/posts/2023/10/04/niclas-thomas.qmd
+++ b/people-paths/career-profiles/posts/2023/10/04/niclas-thomas.qmd
@@ -11,6 +11,8 @@ date: 10/04/2023
 image: images/niclas-thomas.png
 image-alt: Photo of Niclas Thomas.
 toc: false
+aliases: 
+  - /careers/career-profiles/posts/2023/10/04/niclas-thomas.html
 ---
 A passion for maths and solving mathematical problems led Niclas Thomas to a PhD in machine learning with a focus on medical research. But then a conversation with a recruiter steered his career towards data science in the retail sphere. After stints at Tesco, Sainsbury’s, and Gousto, Thomas is now head of data science for Next, the clothing retailer. 
 
@@ -127,7 +129,7 @@ So what do you think will be the main challenges facing data science as a field 
 I think probably, certainly, currently maybe living up to the hype, I suppose. And matching I suppose the classic Gartner Hype Cycle of, it feels like we're probably at the stage where there's a lot of-- the hype has been around for a few years of data science now and I think making sure we tackle the right problems, I suppose, is one of the -- and by 'we' I mean, Next as a business or whatever business we're working in at the time -- I think it's making sure we're working on the right things. Because I think a lot of people will be keen to have data scientists as part of their work and the product they're trying to build. What is the best place to spend our time, and what projects we should be working on most I think is-- becomes important then because, as I say, there's a huge demand for data scientists time, I think, in every company. And so choosing where we spend that time wisely, I think, becomes the key challenge and the important decisions for, especially for a head of data science like myself to make then, to make sure we're best using the team's capacity, then.
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -142,7 +144,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'I fell in love with math, really, and fell into data science because of that.'" Real World Data Science, October 4, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/10/04/niclas-thomas.html)
+: Tarran, Brian. 2023. "'I fell in love with math, really, and fell into data science because of that.'" Real World Data Science, October 4, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/2023/10/04/niclas-thomas.html)
 :::
 :::
 :::
