--- a/people-paths/index.qmd
+++ b/people-paths/index.qmd
@@ -1,6 +1,6 @@
 ---
-pagetitle: Careers | Real World Data Science
-title: Careers
+pagetitle: People & Paths | Real World Data Science
+title: People & Paths
 subtitle: "Insight, advice and guidance on how to succeed in data science. In this section: [Career profiles](career-profiles/index.qmd)"
 search: false
 repo-actions: false
@@ -16,5 +16,7 @@ listing:
   filter-ui: false
   page-size: 30
   feed: true
+aliases: 
+  - /careers/
 ---
-Our careers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd). 
+Our People & Paths content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd). 
