--- a/people-paths/posts/2023/04/18/politics-of-performance-measurement.qmd
+++ b/people-paths/posts/2023/04/18/politics-of-performance-measurement.qmd
@@ -11,6 +11,8 @@ date: 04/18/2023
 image: images/crowd-of-voices.png
 image-alt: A crowd of people talking, with speech bubbles representing the different voices, digital art. Image created by Real World Data Science using Microsoft Bing Image Creator.
 toc: true
+aliases: 
+  - /careers/posts/2023/04/18/politics-of-performance-measurement.html
 ---
 
 At the beginning of 2016, the Criminal Justice Division (CJD) of the Texas Governor's Office received news all government agencies dread: budgets were to be cut. CJD oversaw a grant program that funded specialty courts throughout the state, however it was now being told that the program's budget of \$10.6m would be reduced 20% to \$8.5m by 2018.
@@ -186,7 +188,7 @@ Still, the experience taught me much. I learned first and foremost that programs
 For any kind of change to last, sustainability must be built in from the start. In the moment, these actions can seem low-priority. Policy and rule changes can be arduous and time-consuming. Knowledge transfer from one stably employed staff to another feels redundant and wasteful. But without embedding sustainability, no success will outlast the individual people pushing for it.
 
 ::: {.article-btn}
-[Back to Careers](/careers/index.qmd)
+[Back to Careers](/people-paths/index.qmd)
 :::
 
 ::: {.further-info}
@@ -206,7 +208,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Wright, Noah. 2023. "The politics of performance measurement." Real World Data Science, April 18, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/04/18/politics-of-performance-measurement.html)
+: Wright, Noah. 2023. "The politics of performance measurement." Real World Data Science, April 18, 2023. [URL](https://realworlddatascience.net/people-paths/posts/2023/04/18/politics-of-performance-measurement.html)
 :::
 :::
 :::
