--- a/people-paths/posts/2024/03/21/mjones-interview.qmd
+++ b/people-paths/posts/2024/03/21/mjones-interview.qmd
@@ -12,13 +12,15 @@ date: 03/21/2024 # date is in mm/dd/yyyy
 toc: false
 image: images/mjones-laptop.png
 image-alt: Screengrab of video interview showing Matthew Jones on the left and Jonathan Gillard on the right. Screengrab is overlaid on a laptop background.
+aliases: 
+  - /careers/posts/2024/03/21/mjones-interview.html
 ---
 
 {{< video https://www.youtube.com/embed/3ZlnGsaAj0Q?si=w7W9quAm0drMWWqL >}}
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[Back to Careers](/careers/index.qmd)
+[Back to Careers](/people-paths/index.qmd)
 :::
 :::
 
@@ -37,7 +39,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Gillard, Jonathan. 2024. "Data science and AI in financial services: An interview with Nationwide's Matthew Jones." Real World Data Science, March 21, 2024. [URL](https://realworlddatascience.net/careers/posts/2024/03/21/mjones-interview.html)
+:   Gillard, Jonathan. 2024. "Data science and AI in financial services: An interview with Nationwide's Matthew Jones." Real World Data Science, March 21, 2024. [URL](https://realworlddatascience.net/people-paths/posts/2024/03/21/mjones-interview.html)
 :::
 :::
 :::
