--- a/people-paths/posts/2024/03/27/pholborn-interview.qmd
+++ b/people-paths/posts/2024/03/27/pholborn-interview.qmd
@@ -6,19 +6,21 @@ categories:
   - AI
   - Data
   - Skills
-  - Public sector
+  - Public sectorv
 author: Jonathan Gillard
 date: 03/27/2024 # date is in mm/dd/yyyy
 toc: false
 image: images/pholborn-laptop.png
 image-alt: Screengrab of video showing Jonathan Gillard and Penny Holborn in conversation.
+aliases: 
+  - /careers/posts/2024/03/27/pholborn-interview.html
 ---
 
 {{< video https://www.youtube.com/embed/NcpHUGaV_WI?si=XAjVdwV29zS0IX8Z >}}
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[Back to Careers](/careers/index.qmd)
+[Back to Careers](/people-paths/index.qmd)
 :::
 :::
 
@@ -37,7 +39,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Gillard, Jonathan. 2024. "Data science and AI in the public sector: An interview with ONS’s Penny Holborn." Real World Data Science, March 27, 2024. [URL](https://realworlddatascience.net/careers/posts/2024/03/27/pholborn-interview.html)
+:   Gillard, Jonathan. 2024. "Data science and AI in the public sector: An interview with ONS’s Penny Holborn." Real World Data Science, March 27, 2024. [URL](https://realworlddatascience.net/people-paths/posts/2024/03/27/pholborn-interview.html)
 :::
 :::
 :::
