--- a/people-paths/career-profiles/posts/2023/03/28/tamanna-haque.qmd
+++ b/people-paths/career-profiles/posts/2023/03/28/tamanna-haque.qmd
@@ -14,6 +14,7 @@ image-alt: Black and white portrait photo of Tamanna Haque.
 toc: false
 aliases: 
   - /careers/career-profiles/posts/03/28/tamanna-haque.html
+  - /careers/career-profiles/posts/2023/03/28/tamanna-haque.html
 ---
 **Hi, Tamanna. Thank you for sharing your career story with Real World Data Science. Please tell us a little about yourself and your role in data science.**   
 I'm Tamanna Haque. I’ve been working at Jaguar Land Rover for nearly four years, recently promoted to lead data scientist working within product engineering. It’s coming up to eight years that I’ve been working in the field, and my areas of interest are the use of machine learning to provide the best products and experiences for my customers and stakeholders.  
@@ -91,7 +92,7 @@ I still expect to see a skills gap in the field. There are more routes to gettin
 I also think there’s a challenge of questionable data science products reaching high levels of popularity and usage amongst the public... Some recent developments in this space have been extremely intelligent but raise ethical concerns. Just because something can be done with AI doesn’t mean it should, and my preferences are towards AI being ethical and (ideally) explainable.
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -106,7 +107,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'Data science challenges you to keep learning -- there’ll always be new advances in the field.'" Real World Data Science, March 28, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/03/28/tamanna-haque.html)
+: Tarran, Brian. 2023. "'Data science challenges you to keep learning -- there’ll always be new advances in the field.'" Real World Data Science, March 28, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/03/28/tamanna-haque.html)
 :::
 :::
 :::
