--- a/people-paths/career-profiles/posts/2023/06/28/albert-lee.qmd
+++ b/people-paths/career-profiles/posts/2023/06/28/albert-lee.qmd
@@ -13,10 +13,12 @@ date: 06/28/2023
 image: images/albert-lee.png
 image-alt: Photo of Albert Lee. Photo supplied by Albert Lee, used with permission.
 toc: false
+aliases: 
+  - /career/career-profiles/posts/2023/06/28/albert-lee.html
 ---
 This week, in celebration of Pride, Real World Data Science is collaborating with the [JEDI Outreach Group](https://datascijedi.org/) of the [American Statistical Association](https://www.amstat.org/) (ASA) and the [ASA LGBTQ+ Advocacy Committee](https://sites.google.com/view/asa-lgbtq/home) to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum.
 
-Members of the committee nominated two individuals to be featured as part of our [career profile](https://realworlddatascience.net/careers/career-profiles/) series, and so we're pleased to bring you interviews with Albert Lee (below) and [Claire Morton](claire-morton.qmd).
+Members of the committee nominated two individuals to be featured as part of our [career profile](https://realworlddatascience.net/people-paths/career-profiles/) series, and so we're pleased to bring you interviews with Albert Lee (below) and [Claire Morton](claire-morton.qmd).
 
 Read on to discover more about Albert's data science career (so far).
 
@@ -100,7 +102,7 @@ The [ASA Pride Scholarship](https://www.amstat.org/the-asa-celebrates-pride!) wa
 :::
 
 ::: {.article-btn}
-[Discover more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/people-paths/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
@@ -115,7 +117,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'Living my identity takes courage. It is the same courage necessary to start a new business.'" Real World Data Science, June 28, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/28/albert-lee.html)
+: Tarran, Brian. 2023. "'Living my identity takes courage. It is the same courage necessary to start a new business.'" Real World Data Science, June 28, 2023. [URL](https://realworlddatascience.net/people-paths/career-profiles/posts/2023/06/28/albert-lee.html)
 :::
 :::
 :::
