--- a/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -12,6 +12,8 @@ date: 05/11/2023
 toc: false
 image: images/chatgpt-homescreen.png
 image-alt: Photo of ChatGPT homescreen, by Levart_Photographer on Unsplash.  
+aliases: 
+  - /careers/posts/2023/05/18/chatgpt-data-science-pt1.html
 ---
 For many people, it starts with a question. Something simple, something they already know the answer to. A test, in other words, to see what these AI-powered chatbots are all about. But spend any amount of time with ChatGPT and other such tools and you’ll quickly start to wonder what else they might do, and how useful they might be in your day-to-day working life.
 
@@ -28,7 +30,7 @@ Our interviewees, in order of appearance, are:
 
 The first part of our discussion focuses on how large language models are becoming part of the data science toolkit, and what this new development means for data science teams and skillsets. Stay tuned for part two, which we’ll be publishing soon!
 
-(**UPDATE:** Part two is now published: ["Large language models: Do we need to understand the maths, or simply recognise the limitations?"](/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd))
+(**UPDATE:** Part two is now published: ["Large language models: Do we need to understand the maths, or simply recognise the limitations?"](/people-paths/posts/2023/05/18/chatgpt-data-science-pt2.qmd))
 
 ![](images/chatgpt-homescreen.png){fig-align="center" width="500px" fig-alt="Photo of ChatGPT homescreen, by Levart_Photographer on Unsplash."}
 
@@ -140,13 +142,13 @@ Want to hear more from the RSS Data Science and AI Section? Sign up for its news
 ::: grid
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[Back to Careers](/careers/index.qmd)
+[Back to Careers](/people-paths/index.qmd)
 :::
 :::
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[Read part two &rarr;](/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd)
+[Read part two &rarr;](/people-paths/posts/2023/05/18/chatgpt-data-science-pt2.qmd)
 :::
 :::
 :::
@@ -164,7 +166,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-12}
 How to cite
-:   Tarran, Brian. 2023. "How is ChatGPT changing data science?" Real World Data Science, May 11, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html)
+:   Tarran, Brian. 2023. "How is ChatGPT changing data science?" Real World Data Science, May 11, 2023. [URL](https://realworlddatascience.net/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.html)
 :::
 :::
 :::
