--- a/people-paths/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/people-paths/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -12,9 +12,10 @@ date: 05/18/2023
 toc: false
 image: images/google-deepmind-52afknBiUk4-unsplash.png
 image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
-   
+aliases: 
+  - /careers/posts/2023/05/18/chatgpt-data-science-pt2.html
 ---
-[Part 1 of our conversation with the Royal Statistical Society’s Data Science and AI (DS&AI) Section](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html) ended on a discussion around the need to verify that large language models (LLMs), when embedded in workflows and operational processes, are working as intended. But there was also acknowledgement that this could be difficult to achieve, not least of all because, as Giles Pavey said, “nobody knows exactly how these things work – not even the people who build them.” And then, of course, there is the speed at which developments are taking place: Trevor Duguid Farrant made the point that an expert may not even have a chance to finish reviewing the latest version of an LLM before a new iteration is rolled out.  
+[Part 1 of our conversation with the Royal Statistical Society’s Data Science and AI (DS&AI) Section](https://realworlddatascience.net/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.html) ended on a discussion around the need to verify that large language models (LLMs), when embedded in workflows and operational processes, are working as intended. But there was also acknowledgement that this could be difficult to achieve, not least of all because, as Giles Pavey said, “nobody knows exactly how these things work – not even the people who build them.” And then, of course, there is the speed at which developments are taking place: Trevor Duguid Farrant made the point that an expert may not even have a chance to finish reviewing the latest version of an LLM before a new iteration is rolled out.  
 
 These issues – of verification, explainability and interpretability – are of particular interest to data scientists like Anjali Mazumder, whose work focuses on the impact AI technologies could have, and are having, on society and individuals. 
 
@@ -104,7 +105,7 @@ For me, the question is not, 'Do we understand how ChatGPT works?' We don't unde
 :::
 :::
 
-**Giles, [you mentioned previously that you're doing some work at Unilever around how to minimise hallucination](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html). I don't know how much you can say on what direction that's going in, and how successful you expect that to be, but that's obviously going to be a really important part of refining these models to be more widely usable.** 
+**Giles, [you mentioned previously that you're doing some work at Unilever around how to minimise hallucination](https://realworlddatascience.net/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.html). I don't know how much you can say on what direction that's going in, and how successful you expect that to be, but that's obviously going to be a really important part of refining these models to be more widely usable.** 
 
 **Giles Pavey:** I’m by no means an expert, but there's quite a lot you can do with both the architecture of it and also the pre-prompts that you put in -- more or less saying, "Quote what the source is, and if you're not sure, then tell me you're not sure.” I think what's interesting is the question of whether we’ll have to rely on OpenAI or Microsoft to do that work, and it will be just another thing that we have to trust them for. Or, will it be something that people within an organisation can put in themselves?  
 
@@ -112,7 +113,7 @@ For me, the question is not, 'Do we understand how ChatGPT works?' We don't unde
 
 **GP:** Arguably, the single biggest issue is, who elected Sam Altman (no-one) and are we as society happy with him having so much power over our future? 
 
-**To close us out, I’d like to return to [a question Trevor posed earlier](http://localhost:5404/careers/posts/2023/05/11/chatgpt-data-science-pt1.html), which is: How might organisations like the Royal Statistical Society help companies to embrace LLMs and start using them, so that everyone can benefit from the technology?** 
+**To close us out, I’d like to return to [a question Trevor posed earlier](https://realworlddatascience.net/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.html), which is: How might organisations like the Royal Statistical Society help companies to embrace LLMs and start using them, so that everyone can benefit from the technology?** 
 
 **Adam Davison:** My instinct is that there’s some great parallel here with the stuff that the Data Science and AI Section have been doing in general, where we've said, “OK, there's lots of good advice out there on how to do things in data science, but how do you make it practical? How do you make it real? How do you apply those ethical principles? How do you make sure you have people with the right technical understanding in charge of projects to get value?” If, five years ago, the hype around data science was leading organisations to hire 100 data scientists in the hope that something innovative would happen, well then, we don't want those same organisations now thinking that they need to hire 100 prompt engineers and keep their fingers crossed for something special. Our focus has been on “[industrial strength data science](https://realworlddatascience.net/viewpoints/newsletter/)”, so I think we can extend that to show what “industrial strength LLM usage” looks like in practice. 
 
@@ -124,13 +125,13 @@ Want to hear more from the RSS Data Science and AI Section? Sign up for its news
 ::: grid
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[&larr; Read part one](/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
+[&larr; Read part one](/people-paths/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
 :::
 :::
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
-[Back to Careers](/careers/index.qmd)
+[Back to Careers](/people-paths/index.qmd)
 :::
 :::
 :::
@@ -149,7 +150,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-12}
 How to cite
-:   Tarran, Brian. 2023. "Large language models: Do we need to understand the maths, or simply recognise the limitations?" Real World Data Science, May 18, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/05/18/chatgpt-data-science-pt2.html)
+:   Tarran, Brian. 2023. "Large language models: Do we need to understand the maths, or simply recognise the limitations?" Real World Data Science, May 18, 2023. [URL](https://realworlddatascience.net/people-paths/posts/2023/05/18/chatgpt-data-science-pt2.html)
 :::
 :::
 :::
