--- a/people-paths/career-profiles/posts/2023/06/28/claire-morton.qmd
+++ b/people-paths/career-profiles/posts/2023/06/28/claire-morton.qmd
@@ -13,6 +13,8 @@ date: 06/28/2023
 image: images/claire-morton.png
 image-alt: Photo of Claire Morton. Photo supplied by Claire Morton, used with permission.
 toc: false
+aliases: 
+  - /careers/career-profiles/posts/2023/06/28/claire-morton.html
 ---
 This week, in celebration of Pride, Real World Data Science is collaborating with the [JEDI Outreach Group](https://datascijedi.org/) of the [American Statistical Association](https://www.amstat.org/) (ASA) and the [ASA LGBTQ+ Advocacy Committee](https://sites.google.com/view/asa-lgbtq/home) to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum.
 
