Added social share extension and added to certain ages

--- a/case-studies/posts/2024/05/08/dpm.qmd
+++ b/case-studies/posts/2024/05/08/dpm.qmd
@@ -16,6 +16,16 @@ execute:
   messages: false
   error: false
   warning: false
+filters:
+  - social-share
+share:
+  location: "before-body"
+  permalink: "https://realworlddatascience.net/case-studies/posts/2024/05/08/dpm.html"
+  description: "Forecasting the Health Needs of a Changing Population"
+  twitter: true
+  linkedin: true
+  bsky: true
+  email: true
 ---
 
 ## Background
