--- a/the-pulse/interviews/posts/2023/08/01/alberto-cairo.qmd
+++ b/the-pulse/interviews/posts/2023/08/01/alberto-cairo.qmd
@@ -12,6 +12,16 @@ image: images/alberto-cairo.png
 image-alt: Portrait photo of Alberto Cairo by JCA Photography
 aliases: 
   - /viewpoints/interviews/posts/2023/08/01/alberto-cairo.html
+filters:
+  - social-share
+share:
+  location: "before-body"
+  permalink: "https://realworlddatascience.net/the-pulse/interviews/posts/2023/08/01/alberto-cairo.html"
+  description: "The many ‘dialects’ of data visualization: Alberto Cairo and ‘The Art of Insight’"
+  twitter: true
+  linkedin: true
+  bsky: true
+  email: true
 ---
 
 Alberto Cairo is Knight Chair in Visual Journalism at the School of Communication of the University of Miami (UM). He’s also the director of visualization at UM’s Institute for Data Science and Computing. He joins Real World Data Science to discuss his upcoming book, *The Art of Insight: How Great Visualization Designers Think*, in which Cairo reflects on his conversations with data artists, data journalists, and information designers. 
