--- a/case-studies/posts/2023/11/22/splink.qmd
+++ b/case-studies/posts/2023/11/22/splink.qmd
@@ -17,6 +17,16 @@ execute:
   messages: false
   error: false
   warning: false
+filters:
+  - social-share
+share:
+  location: "before-body"
+  permalink: "https://realworlddatascience.net/case-studies/posts/2023/11/22/splink.html"
+  description: "Forecasting the Health Needs of a Changing Population"
+  twitter: true
+  linkedin: true
+  bsky: true
+  email: true
 ---
 
 In 2019, the data linking team at the Ministry of Justice was challenged to develop a new data linking methodology to produce new, higher quality linked datasets from the justice system.
