--- a/foundation-frontiers/tutorials/posts/2023/04/13/flowers.qmd
+++ b/foundation-frontiers/tutorials/posts/2023/04/13/flowers.qmd
@@ -17,6 +17,16 @@ lightbox: true
 link-bibliography: true
 aliases: 
   - /ideas/tutorials/posts/2023/04/13/flowers.html
+filters:
+  - social-share
+share:
+  location: "before-body"
+  permalink: "https://realworlddatascience.net/foundation-frontiers/tutorials/posts/2023/04/13/flowers.html"
+  description: "A demonstration of the law of the flowering plants"
+  twitter: true
+  linkedin: true
+  bsky: true
+  email: true
 ---
 This tutorial will demonstrate a popular method for predicting the day a flower will bloom. There are many reasons why you might want to predict a bloom date. You might be a scientist studying ecosystems stressed by climate change. Or you might be planning a trip to Amsterdam and would like to time your stay to when the tulips are in bloom. Or maybe you are participating in the annual [Cherry Blossom Prediction Competition](https://competition.statistics.gmu.edu/) and want some ideas to help you get started.
 
