--- a/foundation-frontiers/tutorials/posts/2023/12/12/xmas-cards.qmd
+++ b/foundation-frontiers/tutorials/posts/2023/12/12/xmas-cards.qmd
@@ -20,6 +20,16 @@ image: images/xmas-card.png
 image-alt: Dark blue square with off-white rectangle at the bottom and small random white stars, and two white circles slightly off centre. Five black dots denote two eyes and three buttons on a snowman. Two brown lines look like arms. Two red rectangles form a hat. Orange triangle as a nose, with text reading Merry Christmas at the bottom.
 aliases: 
   - /ideas/tutorials/posts/2023/12/12/xmas-cards.html
+filters:
+  - social-share
+share:
+  location: "before-body"
+  permalink: "https://realworlddatascience.net/foundation-frontiers/tutorials/posts/2023/12/12/xmas-cards.html"
+  description: "Creating Christmas cards with R"
+  twitter: true
+  linkedin: true
+  bsky: true
+  email: true
 ---
 
 When you think about data visualisation in R [@R-base], you'd be forgiven for not jumping straight to thinking about creating Christmas cards. However, the package and functions we often use to create bar charts and line graphs can be repurposed to create festive images. This tutorial provides a step-by-step guide to creating a Christmas card featuring a snowman -- entirely in R. Though this seems like just a fun exercise, the functions and techniques you learn in this tutorial can also transfer into more traditional data visualisations created using {ggplot2} [@ggplot2] in R. 
