Alias redirect fixes, social styles, footer copyright year updated

--- a/the-pulse/newsletter/index.qmd
+++ b/the-pulse/newsletter/index.qmd
@@ -17,6 +17,7 @@ sidebar: false
 comments: false
 aliases: 
   - /news-and-views/newsletter/index.html
+  - /viewpoints/newsletter/index.html
 ---
 
 ## Newsletter archive
