meet the team Willis added

--- a/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -70,6 +70,17 @@ I am a professor at the School of Mathematics, Cardiff University, where I am al
 
 I am excited to see what this site can achieve. I’m particularly keen to support articles describing the latest, cutting-edge methodology, as well as contributions from data professionals in industry who can explain how data science has managed to offer insights into important problems. Data science is a broad church and I want to ensure that the full array of work in this area is represented on this site. I think the diversity of the editorial board will help promote this objective.
 
+**Willis Jensen**
+
+::: {.column-margin}
+![](images/Willis.png)
+:::
+
+I'm a statistician and leader with over 20 years of experience applying data science methods to real-world challenges in business, quality, product development, manufacturing, and supply chain. I hold a PhD in statistics from Virginia Tech and an MS in statistics from Brigham Young University (BYU).  
+
+Currently, I lead a business intelligence team at CHG Healthcare in the USA and serve as an Adjunct Professor of Statistics at BYU, where I get to share my enthusiasm for data with students.  A long-time member and volunteer for the ASA, I represent the association on the Real World Data Science board. 
+
+Throughout my career, I’ve built and led high-performing teams, developed data-drive solutions, and helped organizations become more analytically mature. While I enjoy the technical depth of statistical modeling, I’m most passionate about using data to solve meaningful business problems. With over 25 publications focused on practical applications, I specialize in bridging the gap between business and the broad tent of data science—helping leaders ask better questions and act on insights.
 
 **Hollie Johnson**
 
@@ -121,15 +132,6 @@ I am a senior lecturer in computer science (data science) at Brunel University
 
 I have been working, researching, consulting and teaching in the data science space for a while and I am passionate about the domain and its applications. I am always interested in sharing and hearing what else is being done to support, inform and inspire all those studying and working in the field of data science. I look forward to sharing case studies, how-to guides and data science profiles through this website. 
 
-**Christopher Thiele**
-
-::: {.column-margin}
-![](images/Christopher.png)
-:::
-
-I'm a principal data scientist at Uniper where I lead a team that focuses mainly on financial business processes and upskilling initiatives. We run projects end to end: from use case ideation, requirement collection and translation to prototyping, assessment, deployment and maintenance. Besides the core analytical and data engineering duties, overarching topics such as data design, data governance and  data strategy predominate my days. In my previous role, at the German Economic Institute, I contributed to the development of a cross-functional department that helps apply data science methods in economic research. Projects often involve geospatial analyses or natural language processing. Before that, I worked as a data scientist in customer and marketing analytics, doing statistical analyses such as marketing mix modelling. I have a master's degree in statistics from Warwick University, a bachelor's degree in economics from the University of Cologne and I'm trained as an assistant tax consultant in Germany. 
-
-I see data science as a creative way to solve problems using software engineering and quantitative modelling techniques and I like to build software pieces that people can interact with. I think that there still exists a lot of confusion about data science as a discipline. Reducing it would promote the realisation of its potential for individuals, as a profession, and our society, as a form of digitalisation. I hope that with Real World Data Science we can provide guidance and clarification to everybody engaged or interested in the field and accompany this young profession's development.
 
 ::: keyline
 ---
