Meet the team link added

--- a/about-rwds.qmd
+++ b/about-rwds.qmd
@@ -8,6 +8,8 @@ title-block-banner: true
 ---
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/), in partnership with the [American Statistical Association](https://www.amstat.org/). This site and its content are being developed by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
 
+[Meet the team](the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd)
+
 ## What are our aims?
 Real World Data Science aims to be a trusted, go-to source for high-quality, engaging and inspiring content which helps data science students, practitioners and leaders to: 
 
