Foundation renamed to include "s"

--- a/feeds.qmd
+++ b/feeds.qmd
@@ -14,7 +14,7 @@ title-block-banner: true
 ### Case studies
 [realworlddatascience.net/case-studies/index.xml](https://realworlddatascience.net/applied-insights/case-studies/index.xml)
 
-### Foundation & Frontiers
+### Foundations & Frontiers
 [realworlddatascience.net/foundation-frontiers/index.xml](https://realworlddatascience.net/foundation-frontiers/index.xml)
 
 ### People & Paths
