--- a/foundation-frontiers/datasciencebites/index.qmd
+++ b/foundation-frontiers/datasciencebites/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: DataScienceBites | Foundation & Frontiers | Real World Data Science
+pagetitle: DataScienceBites | Foundations & Frontiers | Real World Data Science
 title: Data Science Bites
 subtitle: Digests of new papers in the data science literature
 search: false
