--- a/foundation-frontiers/index.qmd
+++ b/foundation-frontiers/index.qmd
@@ -1,6 +1,6 @@
 ---
-pagetitle: Foundation & Frontiers | Real World Data Science
-title: Foundation & Frontiers
+pagetitle: Foundations & Frontiers | Real World Data Science
+title: Foundations & Frontiers
 subtitle: "The concepts, tools and methods that make data science possible. In this section: [DataScienceBites](datasciencebites/index.qmd) | [Interviews](interviews/index.qmd)"
 search: false
 repo-actions: false
@@ -20,4 +20,4 @@ listing:
 aliases: 
   - /ideas/index.html
 ---
-Our Foundation & Frontiers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd).
+Our Foundations & Frontiers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd).
