--- a/foundation-frontiers/interviews/index.qmd
+++ b/foundation-frontiers/interviews/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: Interviews | Foundation & Frontiers | Real World Data Science
+pagetitle: Interviews | Foundations & Frontiers | Real World Data Science
 title: Interviews
 subtitle: Deep dives with data scientists on hot topics and burning issues
 search: false
