--- a/index.qmd
+++ b/index.qmd
@@ -222,7 +222,7 @@ Excerpt from the UK government's framework for the use of generative AI
 ::: {.listing-block}
 <a href="foundation-frontiers/index.qmd">
 
-## Foundation & Frontiers
+## Foundations & Frontiers
 </a> 
 
 ::: {#foundation-frontiers}
