--- a/about-rwds.qmd
+++ b/about-rwds.qmd
@@ -11,26 +11,17 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 [Meet the team](the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd)
 
 ## What are our aims?
-Real World Data Science aims to be a trusted, go-to source for high-quality, engaging and inspiring content which helps data science students, practitioners and leaders to: 
-
+As the field of data science evolves rapidly - with new tools, controversies, and breakthroughs emerging almost daily - Real World Data Science offers a space for timely, thoughtful responses grounded in the expertise of our contributors and reviewed by a distinguished editorial board.
+We want to serve people working in data science who are looking for practical insights, methodological rigour and thought-leadership that informs their work and decision-making.
+We want to help you:  
 * discover and learn more efficiently;  
 * acquire practical problem-solving skills;  
-* share their knowledge and accomplishments publicly;  
+* share your knowledge and accomplishments publicly;  
 * work smarter, ethically, and more effectively.  
 
 ## What we provide
-Resources are *created* to meet the needs of our target audiences. These include: 
-
-* **Case studies** – showing how data science is used to solve real-world problems in business, public policy and beyond. 
-* **Explainers** – interrogating the underlying assumptions and limitations of data science tools and methods, to help data scientists make smarter, more informed analytical choices.
-* **Exercises** – to challenge and develop the analytical mindset that all data scientists need to succeed.    
-* **Advice** – interviews, Q&As, and FAQs on such topics as data science ethics, career paths, and communication, to support professional development. 
-
-We are also *curating* resources to help data scientists identify trustworthy, high-quality content. These include: 
-
-* **Training guides** – step-by-step approaches and recommended sources for learning new skills and methods. 
-* **Datasets** – tagged and sorted to help educators and practitioners find data to meet their teaching and training needs. 
-* **Feeds** – who and what to follow to keep up with new ideas and developments.
+Commentary, case studies, interviews, and explainers that speak directly to latest events and emerging trends. 
+Whether unpacking the implications of a new technological development or product launch, or spotlighting innovative practice in the field, the platform is practical, credible and unafraid to ask the hard questions.
 
 ## How you can get involved
-See our open [call for contributions](contributor-docs/call-for-contributions.qmd).
+See our open [call for contributions](the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd).
