--- a/applied-insights/index.qmd
+++ b/applied-insights/index.qmd
@@ -1,7 +1,8 @@
 ---
 pagetitle: Applied Insights | Real World Data Science
 title: Applied Insights
-subtitle: "The concepts, tools and methods that make data science possible. In this section: [Case Studies](case-studies/index.qmd) | [Tutorials](tutorials/index.qmd)"
+subtitle: "How data science is used to solve real-world problems in business, public policy and beyond. 
+In this section: [Case Studies](case-studies/index.qmd) | [Tutorials](tutorials/index.qmd)"
 search: false
 repo-actions: false
 listing:
