--- a/contact.qmd
+++ b/contact.qmd
@@ -9,15 +9,11 @@ title-block-banner: true
 
 - **Email:** [rwds@rss.org.uk](mailto:rwds@rss.org.uk)
 
-- **GitHub:** [@realworlddatascience](https://github.com/realworlddatascience)
-
-- **Zenodo:** [Real World Data Science community](https://zenodo.org/communities/realworlddatascience)
+- **GitHub:** [@realworlddatascience](https://github.com/realworlddatascience))
 
 - **LinkedIn:** [RSS Real World Data Science](https://www.linkedin.com/showcase/rss-real-world-data-science)
 
 - **X:** [@rwdatasci](https://twitter.com/rwdatasci)
-
-- **Mastodon:** [@rwdatasci](https://fosstodon.org/@rwdatasci)
 
 ## Advertising and commercial
 
