--- a/foundation-frontiers/index.qmd
+++ b/foundation-frontiers/index.qmd
@@ -1,7 +1,8 @@
 ---
 pagetitle: Foundations & Frontiers | Real World Data Science
 title: Foundations & Frontiers
-subtitle: "The concepts, tools and methods that make data science possible. In this section: [DataScienceBites](datasciencebites/index.qmd) | [Interviews](interviews/index.qmd)"
+subtitle: "The ideas behind the impact: the concepts, tools and methods that make data science possible. 
+In this section: [DataScienceBites](datasciencebites/index.qmd) | [Interviews](interviews/index.qmd)"
 search: false
 repo-actions: false
 listing:
