--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /foundation-frontiers
     - /people-paths
     - "!index.qmd"
-    - "!development-plan-2.qmd"
+    - "!editors-relaunch.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -33,7 +33,7 @@ listing:
     - "!what-is-CDE-2.qmd"
     - "!policy-problem.qmd"
     - "!use-case-2.qmd"
-    - "!development-plan-2.qmd"
+  
     sort: "date desc"
     type: grid
     categories: false
@@ -122,15 +122,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/applied-insights/case-studies/posts/2024/11/22/development-plan-2.qmd">
+<a href="/the-pulse/editors-blog/posts/2025/07/07/editors-relaunch.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Defining Purposes and Uses to Support the Development of Statistical Products in a 21^st^ Century Census Curated Data Enterprise Environment
-Learn about researchers’ plans to develop the Curated Data Enterprise through a use case research program.  
+## We're Back: Real World Data Science Relaunches
+After a brief hiatus, we're back with a new Call for Submissions.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](applied-insights/case-studies/posts/2024/11/22/images/figure-1.png)
+![](the-pulse/editors-blog/posts/2025/07/07/images/team.png)
 :::
 :::
 
@@ -142,7 +142,7 @@ Learn about researchers’ plans to develop the Curated Data Enterprise through 
 ::: {.header-text} 
 ::: {.content-container}
 ::: {.header-block}
-Welcome to **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/), in partnership with the [American Statistical Association](https://www.amstat.org/). We bring together data science students, practitioners, leaders, and educators to share knowledge, learn from, and be inspired by real-world applications of data science.
+Welcome to **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/), in partnership with the [American Statistical Association](https://www.amstat.org/). We bridge the gap between rigorous analysis and real time relevance, meeting the pace and complexity of today's data driven world with the RSS's trademark steadying presence.
 :::
 :::
 :::
