--- a/people-paths/index.qmd
+++ b/people-paths/index.qmd
@@ -1,7 +1,8 @@
 ---
 pagetitle: People & Paths | Real World Data Science
 title: People & Paths
-subtitle: "Insight, advice and guidance on how to succeed in data science. In this section: [Career profiles](career-profiles/index.qmd)"
+subtitle: "Strategic reflections on careers, leadership and professional evolution in data science. 
+In this section: [Career profiles](career-profiles/index.qmd)"
 search: false
 repo-actions: false
 listing:
