--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -6,21 +6,50 @@ Real World Data Science aims to inform, inspire and strengthen the data science 
 
 We cannot succeed in these aims without the support and contributions of the data science community, so thank you for taking the time to review this open call for contributions.
 
-## What are we looking for?
-Below is a list of our core content areas. We welcome submissions in any of these areas. Each content area is linked to its own set of notes for contributors.
+## What are we looking for? 
+Real World Data Science has four editorial sections. Please read through and consider where your piece would fit best. Each piece we publish needs to be tailored towards the focus of one of these sections.  
 
-* [Case studies](case-studies.qmd)
-* [Explainers](explainers.qmd)
-* [Exercises](exercises.qmd)
-* [Datasets](datasets.qmd)
-* [Training guides](training-guides.qmd)
-* [Recommenders](recommender.qmd)
-* [DataScienceBites](datasciencebites.qmd)
+[THE PULSE](https://realworlddatascience.net/the-pulse/)   
+News, updates and real time commentary. 
+ Purpose: To respond to current events, trends and debates in the data science world with rigour, insight and relevance.   
+Content Types: Articles that speak directly to current events/trends/launches  
+Example Call To Action: Invite readers to share your commentary with their networks as a trusted voice in the space. Invite engagement, discussion and debate over the topics.   
+
+[APPLIED INSIGHTS](https://realworlddatascience.net/applied-insights/)   
+How data science is used to solve real-world problems in business, public policy and beyond  
+Purpose: To showcase real-world applications of data science, including hands-on tutorials, project walk-throughs, and case studies from industry, academia, or public service.  
+Content Types:  
+*High-quality step-by-step tutorials with code  
+*Case studies detailing a problem, approach, and outcome
+*Lessons learned from real-world deployments 
+Example Call To Action: Readers should walk away with something to try.   
+
+[FOUNDATIONS & FRONTIERS](https://realworlddatascience.net/foundation-frontiers/)   
+The ideas behind the impact: the concepts, tools and methods that make data science possible  
+Purpose: To deepen understanding of the theoretical and ethical foundations of data science, and to spotlight thought leadership and emerging ideas.  
+Content Types:
+*Think-piece style articles with an engaging angle on methodology, ethics and standards  
+*Interviews with thought-leaders   
+*Data Science Bites - our handy summaries/explainers of academic papers 
+Example Call To Action: Invite discussion and engagement – pose questions and challenges to the reader.   
+
+
+[PEOPLE & PATHS](https://realworlddatascience.net/people-paths/)  
+Strategic reflections on careers, leadership and professional evolution in data science.  
+Purpose: To explore the evolving nature of data science careers through the lens of experience, leadership, and long-term impact. This section highlights how professionals shape and are shaped by the field—through roles, decisions, and philosophies.  
+Content Types:
+*Profiles of/interviews with senior professionals reflecting on career philosophy and leadership  
+*Roundtables with experts on hiring, mentoring, or organisational design  
+*Commentary on career-defining trends, such as the rise of AI governance or the shift toward interdisciplinary teams  
+Example Call To Action: Encourage readers to share our strategic insights with their community. 
+ 
+## Use of AI in Submissions  
+We recognise that LLMs and other generative AI tools are increasingly part of the data science workflow, from code generation and data cleaning to drafting documentation and shaping analysis. We welcome a transparent approach in submissions that have made use of these tools, and ask that authors include a declaration outlining where and how AI was used in the development of their submission. This helps us maintain transparency, uphold standards of reproducibility, and better understand the evolving role of AI in real-world data science practice. 
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
 
 ## Our target audience
-Real World Data Science is for all who work in data science -- whether they are students, teachers, practitioners or leaders. Submissions do not have to appeal to *all* data scientists, however. Contributors should think carefully about who they are trying to reach, and craft their submissions accordingly.
+Real World Data Science is for all who work in data science. Submissions do not have to appeal to *all* data scientists, however. Contributors should think carefully about who they are trying to reach, and craft their submissions accordingly.
 
 ## What can submissions include?
 We encourage contributors to experiment with and include different media formats in their submissions -- text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) -- the new open-source publishing system developed by [Posit](https://posit.co/) -- submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. 
