--- a/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
+++ b/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
@@ -1,37 +1,68 @@
 ---
-title: "We're Back: Real World Data Science Relaunches"
+title: "Call for Submissions"
 description: |
- After a brief hiatus, we're back with a new Call for Submissions.
+ Contribute to our new editorial sections 
 categories:
   - Call for contributions
   - Updates
 author: Editorial Board 
 date: 07/07/2025
 toc: true
-image: images/team.png
-image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
+image: images/open.png
+image-alt: A neon sign saying "Open"
 
 ---
 
-You may have noticed our brief hiatus. Since publishing our series on AI - which covered [the quest for human-level intelligence](https://realworlddatascience.net/foundation-frontiers/posts/2024/04/29/gen-ai-human-intel.html), [data-set risks](https://realworlddatascience.net/foundation-frontiers/posts/2024/05/07/ai-series-3.html), [ethical considerations](https://realworlddatascience.net/foundation-frontiers/posts/2024/05/14/ai-series-2.html) and much more - the ongoing deluge of content and commentary on AI in the wider world has continued to accelerate. This year has seen a surge in developments that sit at the intersection of data science and AI: from the growing use of synthetic data to overcome privacy and bias challenges, to the rise of multi-modal models that demand increasingly sophisticated data engineering and integration techniques. The emergence of Agentic AI has sparked new conversations around data provenance, model interpretability, and the reproducibility crisis in machine learning. Meanwhile, the meteoric rise of open-source disruptor DeepSeek triggered stock-market ruptures and industry panic, before [cyber-attacks](https://www.theguardian.com/technology/2025/jan/27/deepseek-cyberattack-ai), [data leaks](https://www.wiz.io/blog/wiz-research-uncovers-exposed-deepseek-database-leak) and a [failed safety test](https://gizmodo.com/deepseek-gets-an-f-in-safety-from-researchers-2000558645?utm_source=pocket_shared) complicated its standing -  a parable for the volatility of the space, where data governance failures and safety oversights can rapidly derail innovation. Meanwhile, governments worldwide are [investing heavily](https://www.aa.com.tr/en/europe/macron-announces-112b-in-ai-investment-over-coming-years/3477218?utm_source=pocket_saves) in [national data infrastructure](https://assets.publishing.service.gov.uk/media/67851771f0528401055d2329/ai_opportunities_action_plan.pdf?utm_source=substack&utm_medium=email) and advanced analytics capabilities, while grappling with how best to regulate a field that is evolving faster than policy can keep up.  
+Get ready to engage with Real World Data Science as we unveil an exciting editorial refresh! We're thrilled to announce that submissions are now open across our four dynamic sections: The Pulse, Applied Insights, Foundations & Frontiers, and People & Pathways. Join us as we redefine the conversation in data science with fresh perspectives and insights.
+Real World Data Science is relaunching to meet the pace and complexity of today's data-driven world in real time, with the RSS's trademark steadying presence. We will be publishing high-quality case-studies, tutorials and think-pieces that bridge the gap between rigorous analysis and real-time relevance, and that speak directly to latest events and emerging trends. 
+All submissions will be peer-reviewed by members of the Real World Data Science [Editorial Board](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html).  
 
-The world of data science has been a dizzying place over the last few months, so we took a moment to pause and take stock. In the face of rapid change and constant noise, it felt important to reflect with intention on the role Real World Data Science can and should play in this evolving landscape. Now we’re back - ready to rejoin the conversation with renewed clarity and purpose. 
+## Our Audience:  
+People working in data science looking for practical insights, methodological rigour and thought-leadership that informs their work and decision-making. 
 
-As a project from the [Royal Statistical Society](https://rss.org.uk/), in partnership with the [American Statistical Association](https://www.amstat.org/), we are backed by organisations with nearly two centuries of history in championing sound evidence, rigorous methodology and ethical data use. These values form the foundation of our next phase - distilled into the essential pillars: data, evidence and decision. With an esteemed editorial board representing the cutting-edge of industry and academia, and an international network of practitioners working at the coalface of modern data science, we are uniquely placed to navigate the pace and complexity of today's data-driven world. Real World Data Science will meet that world in real time with the RSS's trademark steadying presence, bridging the gap between rigorous analysis and real-time relevance. 
+## Our Voice:  
+Authoritative, Trustworthy, Cutting Edge 
 
-We are now returning with a slightly refreshed site, encompassing four editorial sections:  
-[The Pulse](https://realworlddatascience.net/the-pulse/) - covering news, updates and real-time commentary  
-[Applied Insights](https://realworlddatascience.net/applied-insights/) - exploring how data science is used to solve real-world problems in business, public policy and beyond  
-[Foundations & Frontiers](https://realworlddatascience.net/foundation-frontiers/) - unpicking the ideas behind the impact: the concepts, tools and methods that make data science possible  
-[People & Paths](https://realworlddatascience.net/people-paths/) - offering strategic reflections on careers, leadership and professional evolution in data science.  
+## Our Editorial Sections:  
+Real World Data Science has four editorial sections. Please read through and consider where your piece would fit best. Each piece we publish needs to be tailored towards the focus of one of these sections.  
 
-You can find the full details of these sections, plus guidance around submitting to them, in our new Call for Submissions.  
+[THE PULSE](https://realworlddatascience.net/the-pulse/)   
+News, updates and real time commentary. 
+ Purpose: To respond to current events, trends and debates in the data science world with rigour, insight and relevance.   
+Content Types: Articles that speak directly to current events/trends/launches  
+Example Call To Action: Invite readers to share your commentary with their networks as a trusted voice in the space. Invite engagement, discussion and debate over the topics.   
 
-Despite these updates, we remain committed to providing content that is useful and relevant for practicing data scientists seeking to learn good practices in the field and new potential applications. 
+[APPLIED INSIGHTS](https://realworlddatascience.net/applied-insights/)   
+How data science is used to solve real-world problems in business, public policy and beyond  
+Purpose: To showcase real-world applications of data science, including hands-on tutorials, project walk-throughs, and case studies from industry, academia, or public service.  
+Content Types:  
+*High-quality step-by-step tutorials with code  
+*Case studies detailing a problem, approach, and outcome  
+*Lessons learned from real-world deployments 
+Example Call To Action: Readers should walk away with something to try.   
 
-The choices we make now will shape how data and AI serve society for years to come. If you’re working on the front lines of these changes, whether through research, practice, or critical reflection, we invite you to share your insights and help us build a future for data science that is thoughtful, transparent and grounded in real world understanding. 
+[FOUNDATIONS & FRONTIERS](https://realworlddatascience.net/foundation-frontiers/)   
+The ideas behind the impact: the concepts, tools and methods that make data science possible  
+Purpose: To deepen understanding of the theoretical and ethical foundations of data science, and to spotlight thought leadership and emerging ideas.  
+ Content Types:
+*Think-piece style articles with an engaging angle on methodology, ethics and standards   
+*Interviews with thought-leaders   
+*Summaries/explainers of academic papers (Data Science Bites)
+Example Call To Action: Invite discussion and engagement – pose questions and challenges to the reader.   
 
-[Meet the Team](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html)
+
+[PEOPLE & PATHS](https://realworlddatascience.net/people-paths/)  
+Strategic reflections on careers, leadership and professional evolution in data science.  
+Purpose: To explore the evolving nature of data science careers through the lens of experience, leadership, and long-term impact. This section highlights how professionals shape and are shaped by the field—through roles, decisions, and philosophies.  
+Content Types:
+*Profiles of/interviews with senior professionals reflecting on career philosophy and leadership  
+*Roundtables with experts on hiring, mentoring, or organisational design 
+*Commentary on career-defining trends, such as the rise of AI governance or the shift toward interdisciplinary teams   
+Example Call To Action: Encourage readers to share our strategic insights with their community. 
+ 
+## Use of AI in Submissions  
+We recognise that LLMs and other generative AI tools are increasingly part of the data science workflow, from code generation and data cleaning to drafting documentation and shaping analysis. We welcome a transparent approach in submissions that have made use of these tools, and ask that authors include a declaration outlining where and how AI was used in the development of their submission. This helps us maintain transparency, uphold standards of reproducibility, and better understand the evolving role of AI in real-world data science practice. 
+
  
  
 ::: {.article-btn}
@@ -44,12 +75,12 @@ The choices we make now will shape how data and AI serve society for years to co
 Copyright and licence
 : &copy; 2025 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail photo by <a href="https://unsplash.com/@johnsonvr?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Virgina Johnson</a> on <a href="https://unsplash.com/photos/turned-on-red-open-neon-sigange-QmNnZj_Ok-M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
 
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Real World Data Science Editorial Board. 2025. "We're Back: Real World Data Science Relaunches" Real World Data Science, March 6, 2024. [URL](https://realworlddatascience.net/the-pulse/editors-blog/posts/2025/07/07/editors-relaunch.html)
+: Real World Data Science Editorial Board. 2025. "Call for Submissions" Real World Data Science, July 7, 2025. [URL](https://realworlddatascience.net/the-pulse/editors-blog/posts/2025/07/07/relaunch-CFS.html)
 :::
 :::
 :::
