--- a/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
+++ b/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
@@ -8,7 +8,7 @@ categories:
 author: Editorial Board 
 date: 07/07/2025
 toc: true
-image: images/open.jpg
+image: Images/open.jpg
 image-alt: A neon sign saying "Open"
 
 ---
