--- a/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
+++ b/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
@@ -15,6 +15,7 @@ image-alt: A neon sign saying "Open"
 
 Get ready to engage with Real World Data Science as we unveil an exciting editorial refresh! We're thrilled to announce that submissions are now open across our four dynamic sections: The Pulse, Applied Insights, Foundations & Frontiers, and People & Pathways. Join us as we redefine the conversation in data science with fresh perspectives and insights.
 Real World Data Science is relaunching to meet the pace and complexity of today's data-driven world in real time, with the RSS's trademark steadying presence. We will be publishing high-quality case-studies, tutorials and think-pieces that bridge the gap between rigorous analysis and real-time relevance, and that speak directly to latest events and emerging trends. 
+
 All submissions will be peer-reviewed by members of the Real World Data Science [Editorial Board](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html).  
 
 ## Our Audience:  
@@ -27,6 +28,7 @@ Authoritative, Trustworthy, Cutting Edge
 Real World Data Science has four editorial sections. Please read through and consider where your piece would fit best. Each piece we publish needs to be tailored towards the focus of one of these sections.  
 
 [THE PULSE](https://realworlddatascience.net/the-pulse/)
+
 News, updates and real time commentary. 
 
 Purpose: To respond to current events, trends and debates in the data science world with rigour, insight and relevance.   
@@ -36,7 +38,7 @@ Content Types: Articles that speak directly to current events/trends/launches
 Example Call To Action: Invite readers to share your commentary with their networks as a trusted voice in the space. Invite engagement, discussion and debate over the topics.   
 
 [APPLIED INSIGHTS](https://realworlddatascience.net/applied-insights/)   
-How data science is used to solve real-world problems in business, public policy and beyond 
+How data science is used to solve real-world problems in business, public policy and beyond. 
 
 Purpose: To showcase real-world applications of data science, including hands-on tutorials, project walk-throughs, and case studies from industry, academia, or public service.  
 
@@ -49,7 +51,7 @@ Content Types:
 Example Call To Action: Readers should walk away with something to try.   
 
 [FOUNDATIONS & FRONTIERS](https://realworlddatascience.net/foundation-frontiers/)   
-The ideas behind the impact: the concepts, tools and methods that make data science possible 
+The ideas behind the impact: the concepts, tools and methods that make data science possible. 
 
 Purpose: To deepen understanding of the theoretical and ethical foundations of data science, and to spotlight thought leadership and emerging ideas.  
 
