--- a/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
+++ b/the-pulse/editors-blog/posts/2025/07/08/relaunch-CFS.qmd
@@ -80,7 +80,7 @@ Example Call To Action: Encourage readers to share our strategic insights with t
 ## Use of AI in Submissions  
 We recognise that LLMs and other generative AI tools are increasingly part of the data science workflow, from code generation and data cleaning to drafting documentation and shaping analysis. We welcome a transparent approach in submissions that have made use of these tools, and ask that authors include a declaration outlining where and how AI was used in the development of their submission. This helps us maintain transparency, uphold standards of reproducibility, and better understand the evolving role of AI in real-world data science practice. 
 
- 
+To make your submission, please review our [contributor guidelines](https://realworlddatascience.net/contributor-docs/contributor-guidelines.html) and email us at rwds@rss.org.uk 
  
 ::: {.article-btn}
 [Back to Editors' blog](/the-pulse/editors-blog/index.qmd)
