--- a/the-pulse/posts/2025/07/28/NHS-foundation-AI.qmd
+++ b/the-pulse/posts/2025/07/28/NHS-foundation-AI.qmd
@@ -98,7 +98,7 @@ We will get there. Foundational models in healthcare are no longer a theoretical
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 About the author
-: <a href="https://theconversation.com/profiles/michael-timothy-bennett-1283108">Michael Timothy Bennett</a> is a PhD student in the School of Computing, <a href="https://theconversation.com/institutions/australian-national-university-877">Australian National University</a>.
+: [Will Browne](https://www.linkedin.com/in/will-browne-391b1930/) is co-founder of healthcare technology company [Emrys Health](https://www.emrys.health/), where he works on the development of infrastructure for transformative, equitable and accessible healthcare. He is Events Secretary of the [RSS Data Science and AI section](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/) and a member of the [RSS AI Taskforce](https://rss.org.uk/policy-campaigns/policy-groups/ai-task-force/).
 Copyright and licence
 : &copy; 2025 Royal Statistical Society
 : Thumbnail image by <a href="https://unsplash.com/@tugcegungormezler?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tugce Gungormezler</a> / on Unsplash.
