--- a/the-pulse/posts/2025/07/28/NHS-foundation-AI.qmd
+++ b/the-pulse/posts/2025/07/28/NHS-foundation-AI.qmd
@@ -8,7 +8,7 @@ categories:
   - Machine learning
   - Deep learning
   - Econometrics
-date: 0728/2025
+date: 07/28/2025
 toc: true
 image: Images/NHS.jpg
 image-alt: An image of a croched NHS flag attached to a tree 
